@@ -45,13 +45,19 @@
 #   May contain a textual description of the impact, if the analyzer
 #   is able to provide additional details.
 #
+# - source.node.address:
+#   target.node.address:
+#   Create a new Address inside a Node object (that may contain several Address).
+#
 # - source.node.address.address:
-#   Address that issued the attack.
-#   There can be more than one.
+#   target.node.address.address:
+#   Source/Destination address for the attack.
 # 
-# - target.node.address.address:
-#   Address that has been attacked.
-#   There can be more than one.
+# - source.node.address.category:
+#   target.node.address.category:
+#   The type of address represented.  The permitted values
+#   for this attribute are shown below.  The default value is
+#   "unknown".
 #
 # - source.node.name,
 #   target.node.name:
@@ -132,3 +138,20 @@ regex=PAM_unix\[([0-9]+)\][^(]+\(uid=([0-9]+)\) -> ([^ ]+); class.name=Authentic
 regex=entered promiscuous mode; class.name=Promiscuous mode detected; impact.completion = succeeded; impact.type = other; impact.severity = medium; impact.description=A sniffer is probably running on this machine;
 
 regex=no such user; class.name=Invalid User; impact.completion = failed; impact.type = other; impact.severity = medium; impact.description = Someone tried to log in using a non existing user;
+
+regex=.*SEC-[0-9]+-IPACCESSLOGP: list ([0-9]+) denied ([a-z]+) ([0-9\.]+)\(([0-9]+)\).*-> ([0-9\.]+)\(([0-9]+)\).*; \
+class.name=Cisco ip access; \
+impact.completion = failed; \
+impact.type = other; \
+impact.severity = medium; \
+impact.description= Someone tried to bypass access-list #$1; \
+source.node.address; \
+source.node.address.category=ipv4-addr; \
+source.node.address.address = $3; \
+source.service.port = $4; \
+source.service.protocol = $2; \
+target.node.address; \
+target.node.address.category=ipv4-addr; \
+target.node.address.address = $5; \
+target.service.port = $6; \
+target.service.protocol = $2;
